# PYFires

./: .gitignore  Example_Detection.py  Example_Detection_FCI.py  Proc_FCI_Example.ipynb  Proc_GOES_Example.ipynb  Proc_HIM_Example.ipynb  Proc_SEV_Example.ipynb  README.md  pyproject.toml  setup.py
pyfires/: PYF_detection.py
utils/: get_him.py
