[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfires"
version = "0.1.0"
description = "An algorithm to detect fires in satellite imagery."
readme = "README.md"
authors = [{ name = "Simon R Proud", email = "simon.proud@stfc.ac.uk" }]
license = { text = "GPLv3" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["satellite", "fires", "remote-sensing", "earth-observation"]
dependencies = [
    "numpy<2",
    "scipy>=1.7.1",
    "dask>=2023.10.0",
    "dask_image",
    "pyorbital>=1.7.1",
    "pyresample>=1.22.1",
    "pyspectral>=0.13.5",
    "satpy>=0.53",
    "click>=8.0.3",
    "numba>=0.55.0",
    "xarray>=0.20.2",
    "cython~=3.0.4",
    "netcdf4==1.6.4",
    "setuptools>=75.6.0",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/simonrp84/PyFires"

[dependency-groups]
dev = [
    "bokeh>=3.6.2",
    "hdf5plugin>=5.0.0",
    "ipykernel>=6.29.5",
    "rasterio>=1.4.3",
    "ruff>=0.8.0",
]
